mdmCeneveo/src/objects/Leads_Snapshot__c.object
<CustomObject>
    <description>For use with Chatter Only users who need access to run leads</description>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>*Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Business Process Outsourcing (BPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Comics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Consumer/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Contract Packagers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Enterprise Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Government Printing Office (GPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Managed Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Multi-level Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Private Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Travel/Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency/Creative Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Untouched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prequalified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Followed Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_source__c</fullName>
        <label>Lead source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - Cenveo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPrint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPublisherServices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - GilbrethUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Snapshot</label>
    <nameField>
        <label>Leads Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>